--- a/sdk/tables/aztable/recordings/TestTableClient_Storage/TestAddBasicEntity.yaml
+++ b/sdk/tables/aztable/recordings/TestTableClient_Storage/TestAddBasicEntity.yaml
@@ -2,7 +2,7 @@
 version: 1
 interactions:
 - request:
-    body: '{"TableName":"gotablemuho094vy5lrg"}'
+    body: '{"TableName":"gotabledhho2vetd9pvf"}'
     form: {}
     headers:
       Accept:
@@ -19,35 +19,35 @@ interactions:
       - azsdk-go-aztable/<version> azsdk-go-aztable/<version> azcore/v0.16.2 (go1.16.5;
         Windows_NT)
       X-Ms-Date:
-      - Thu, 08 Jul 2021 15:45:51 GMT
+      - Tue, 13 Jul 2021 19:45:56 GMT
       X-Ms-Version:
       - "2019-02-02"
     url: https://seankaneprim.table.core.windows.net/Tables
     method: POST
   response:
-    body: '{"odata.metadata":"https://seankaneprim.table.core.windows.net/$metadata#Tables/@Element","TableName":"gotablemuho094vy5lrg"}'
+    body: '{"odata.metadata":"https://seankaneprim.table.core.windows.net/$metadata#Tables/@Element","TableName":"gotabledhho2vetd9pvf"}'
     headers:
       Cache-Control:
       - no-cache
       Content-Type:
       - application/json;odata=minimalmetadata;streaming=true;charset=utf-8
       Date:
-      - Thu, 08 Jul 2021 15:45:51 GMT
+      - Tue, 13 Jul 2021 19:45:56 GMT
       Location:
-      - https://seankaneprim.table.core.windows.net/Tables('gotablemuho094vy5lrg')
+      - https://seankaneprim.table.core.windows.net/Tables('gotabledhho2vetd9pvf')
       Server:
       - Windows-Azure-Table/1.0 Microsoft-HTTPAPI/2.0
       X-Content-Type-Options:
       - nosniff
       X-Ms-Request-Id:
-      - 3d0ff3ba-f002-0041-2d10-74b091000000
+      - 6319f75a-8002-0090-771f-78d21b000000
       X-Ms-Version:
       - "2019-02-02"
     status: 201 Created
     code: 201
     duration: ""
 - request:
-    body: '{"Float":3.14159,"Float@odata.type":"Edm.Double","Integer":10,"Integer@odata.type":"Edm.Int32","PartitionKey":"pk001","RowKey":"rk001","String":"abcdef","String@odata.type":"Edm.String"}'
+    body: '{"Float":3.14159,"Integer":10,"PartitionKey":"pk001","RowKey":"rk001","String":"abcdef","TimeStamp":"0001-01-01T00:00:00Z"}'
     form: {}
     headers:
       Accept:
@@ -55,7 +55,7 @@ interactions:
       Authorization:
       - sanitized
       Content-Length:
-      - "186"
+      - "123"
       Content-Type:
       - application/json
       Dataserviceversion:
@@ -66,10 +66,10 @@ interactions:
       - azsdk-go-aztable/<version> azsdk-go-aztable/<version> azcore/v0.16.2 (go1.16.5;
         Windows_NT)
       X-Ms-Date:
-      - Thu, 08 Jul 2021 15:45:52 GMT
+      - Tue, 13 Jul 2021 19:45:57 GMT
       X-Ms-Version:
       - "2019-02-02"
-    url: https://seankaneprim.table.core.windows.net/gotablemuho094vy5lrg
+    url: https://seankaneprim.table.core.windows.net/gotabledhho2vetd9pvf
     method: POST
   response:
     body: ""
@@ -79,13 +79,13 @@ interactions:
       Content-Length:
       - "0"
       Dataserviceid:
-      - https://seankaneprim.table.core.windows.net/gotablemuho094vy5lrg(PartitionKey='pk001',RowKey='rk001')
+      - https://seankaneprim.table.core.windows.net/gotabledhho2vetd9pvf(PartitionKey='pk001',RowKey='rk001')
       Date:
-      - Thu, 08 Jul 2021 15:45:51 GMT
+      - Tue, 13 Jul 2021 19:45:56 GMT
       Etag:
-      - W/"datetime'2021-07-08T15%3A45%3A51.6693446Z'"
+      - W/"datetime'2021-07-13T19%3A45%3A56.6831415Z'"
       Location:
-      - https://seankaneprim.table.core.windows.net/gotablemuho094vy5lrg(PartitionKey='pk001',RowKey='rk001')
+      - https://seankaneprim.table.core.windows.net/gotabledhho2vetd9pvf(PartitionKey='pk001',RowKey='rk001')
       Preference-Applied:
       - return-no-content
       Server:
@@ -93,7 +93,7 @@ interactions:
       X-Content-Type-Options:
       - nosniff
       X-Ms-Request-Id:
-      - 3d0ff3e8-f002-0041-5810-74b091000000
+      - 6319f7aa-8002-0090-431f-78d21b000000
       X-Ms-Version:
       - "2019-02-02"
     status: 204 No Content
@@ -113,28 +113,28 @@ interactions:
       - azsdk-go-aztable/<version> azsdk-go-aztable/<version> azcore/v0.16.2 (go1.16.5;
         Windows_NT)
       X-Ms-Date:
-      - Thu, 08 Jul 2021 15:45:52 GMT
+      - Tue, 13 Jul 2021 19:45:57 GMT
       X-Ms-Version:
       - "2019-02-02"
-    url: https://seankaneprim.table.core.windows.net/gotablemuho094vy5lrg(PartitionKey='pk001',RowKey='rk001')
+    url: https://seankaneprim.table.core.windows.net/gotabledhho2vetd9pvf(PartitionKey='pk001',RowKey='rk001')
     method: GET
   response:
-    body: '{"odata.metadata":"https://seankaneprim.table.core.windows.net/$metadata#gotablemuho094vy5lrg/@Element","odata.etag":"W/\"datetime''2021-07-08T15%3A45%3A51.6693446Z''\"","PartitionKey":"pk001","RowKey":"rk001","Timestamp":"2021-07-08T15:45:51.6693446Z","Float":3.14159,"Integer":10,"String":"abcdef"}'
+    body: '{"odata.metadata":"https://seankaneprim.table.core.windows.net/$metadata#gotabledhho2vetd9pvf/@Element","odata.etag":"W/\"datetime''2021-07-13T19%3A45%3A56.6831415Z''\"","PartitionKey":"pk001","RowKey":"rk001","Timestamp":"2021-07-13T19:45:56.6831415Z","Float":3.14159,"Integer":10,"String":"abcdef","TimeStamp":"0001-01-01T00:00:00Z"}'
     headers:
       Cache-Control:
       - no-cache
       Content-Type:
       - application/json;odata=minimalmetadata;streaming=true;charset=utf-8
       Date:
-      - Thu, 08 Jul 2021 15:45:51 GMT
+      - Tue, 13 Jul 2021 19:45:56 GMT
       Etag:
-      - W/"datetime'2021-07-08T15%3A45%3A51.6693446Z'"
+      - W/"datetime'2021-07-13T19%3A45%3A56.6831415Z'"
       Server:
       - Windows-Azure-Table/1.0 Microsoft-HTTPAPI/2.0
       X-Content-Type-Options:
       - nosniff
       X-Ms-Request-Id:
-      - 3d0ff45f-f002-0041-4410-74b091000000
+      - 6319f7f0-8002-0090-091f-78d21b000000
       X-Ms-Version:
       - "2019-02-02"
     status: 200 OK
@@ -154,26 +154,26 @@ interactions:
       - azsdk-go-aztable/<version> azsdk-go-aztable/<version> azcore/v0.16.2 (go1.16.5;
         Windows_NT)
       X-Ms-Date:
-      - Thu, 08 Jul 2021 15:45:52 GMT
+      - Tue, 13 Jul 2021 19:45:57 GMT
       X-Ms-Version:
       - "2019-02-02"
-    url: https://seankaneprim.table.core.windows.net/gotablemuho094vy5lrg()?%24filter=PartitionKey+eq+%27pk001%27
+    url: https://seankaneprim.table.core.windows.net/gotabledhho2vetd9pvf()?%24filter=PartitionKey+eq+%27pk001%27
     method: GET
   response:
-    body: '{"odata.metadata":"https://seankaneprim.table.core.windows.net/$metadata#gotablemuho094vy5lrg","value":[{"odata.etag":"W/\"datetime''2021-07-08T15%3A45%3A51.6693446Z''\"","PartitionKey":"pk001","RowKey":"rk001","Timestamp":"2021-07-08T15:45:51.6693446Z","Float":3.14159,"Integer":10,"String":"abcdef"}]}'
+    body: '{"odata.metadata":"https://seankaneprim.table.core.windows.net/$metadata#gotabledhho2vetd9pvf","value":[{"odata.etag":"W/\"datetime''2021-07-13T19%3A45%3A56.6831415Z''\"","PartitionKey":"pk001","RowKey":"rk001","Timestamp":"2021-07-13T19:45:56.6831415Z","Float":3.14159,"Integer":10,"String":"abcdef","TimeStamp":"0001-01-01T00:00:00Z"}]}'
     headers:
       Cache-Control:
       - no-cache
       Content-Type:
       - application/json;odata=minimalmetadata;streaming=true;charset=utf-8
       Date:
-      - Thu, 08 Jul 2021 15:45:51 GMT
+      - Tue, 13 Jul 2021 19:45:56 GMT
       Server:
       - Windows-Azure-Table/1.0 Microsoft-HTTPAPI/2.0
       X-Content-Type-Options:
       - nosniff
       X-Ms-Request-Id:
-      - 3d0ff489-f002-0041-6e10-74b091000000
+      - 6319f82b-8002-0090-441f-78d21b000000
       X-Ms-Version:
       - "2019-02-02"
     status: 200 OK
@@ -191,10 +191,10 @@ interactions:
       - azsdk-go-aztable/<version> azsdk-go-aztable/<version> azcore/v0.16.2 (go1.16.5;
         Windows_NT)
       X-Ms-Date:
-      - Thu, 08 Jul 2021 15:45:52 GMT
+      - Tue, 13 Jul 2021 19:45:57 GMT
       X-Ms-Version:
       - "2019-02-02"
-    url: https://seankaneprim.table.core.windows.net/Tables('gotablemuho094vy5lrg')
+    url: https://seankaneprim.table.core.windows.net/Tables('gotabledhho2vetd9pvf')
     method: DELETE
   response:
     body: ""
@@ -204,13 +204,13 @@ interactions:
       Content-Length:
       - "0"
       Date:
-      - Thu, 08 Jul 2021 15:45:51 GMT
+      - Tue, 13 Jul 2021 19:45:56 GMT
       Server:
       - Windows-Azure-Table/1.0 Microsoft-HTTPAPI/2.0
       X-Content-Type-Options:
       - nosniff
       X-Ms-Request-Id:
-      - 3d0ff4b9-f002-0041-1d10-74b091000000
+      - 6319f869-8002-0090-7c1f-78d21b000000
       X-Ms-Version:
       - "2019-02-02"
     status: 204 No Content
