--- a/sdk/tables/aztable/recordings/TestTableClient_Cosmos/TestAddComplexEntity-variables.yaml
+++ b/sdk/tables/aztable/recordings/TestTableClient_Cosmos/TestAddComplexEntity-variables.yaml
@@ -1,6 +1,5 @@
 ---
 COSMOS_TABLES_ENDPOINT_SUFFIX: cosmos.azure.com
-TABLES_COSMOS_ACCOUNT_NAME: chrisstablesprim
+TABLES_COSMOS_ACCOUNT_NAME: seankaneprim
 TABLES_PRIMARY_COSMOS_ACCOUNT_KEY: Kg==
-now: "2021-04-10T19:18:39.9706889-05:00"
-randomSeed: "1618100318"
+randomSeed: "1626279858"
