--- a/sdk/tables/aztable/recordings/TestTableClient_Storage/TestAddEntity.yaml
+++ b/sdk/tables/aztable/recordings/TestTableClient_Storage/TestAddEntity.yaml
@@ -2,7 +2,7 @@
 version: 1
 interactions:
 - request:
-    body: '{"TableName":"gotableldjhskq166plj"}'
+    body: '{"TableName":"gotables5trepuob5fym"}'
     form: {}
     headers:
       Accept:
@@ -16,39 +16,39 @@ interactions:
       Dataserviceversion:
       - "3.0"
       User-Agent:
-      - azsdk-go-tables/<version> azsdk-go-tables/<version> azcore/v0.13.4 (go1.16.2;
+      - azsdk-go-aztable/<version> azsdk-go-aztable/<version> azcore/v0.16.2 (go1.16.5;
         Windows_NT)
       X-Ms-Date:
-      - Mon, 05 Apr 2021 00:00:55 GMT
+      - Wed, 14 Jul 2021 15:54:30 GMT
       X-Ms-Version:
       - "2019-02-02"
-    url: https://chrisstablesprim.table.core.windows.net/Tables
+    url: https://seankaneprim.table.core.windows.net/Tables
     method: POST
   response:
-    body: '{"odata.metadata":"https://chrisstablesprim.table.core.windows.net/$metadata#Tables/@Element","TableName":"gotableldjhskq166plj"}'
+    body: '{"odata.metadata":"https://seankaneprim.table.core.windows.net/$metadata#Tables/@Element","TableName":"gotables5trepuob5fym"}'
     headers:
       Cache-Control:
       - no-cache
       Content-Type:
       - application/json;odata=minimalmetadata;streaming=true;charset=utf-8
       Date:
-      - Mon, 05 Apr 2021 00:00:55 GMT
+      - Wed, 14 Jul 2021 15:54:30 GMT
       Location:
-      - https://chrisstablesprim.table.core.windows.net/Tables('gotableldjhskq166plj')
+      - https://seankaneprim.table.core.windows.net/Tables('gotables5trepuob5fym')
       Server:
       - Windows-Azure-Table/1.0 Microsoft-HTTPAPI/2.0
       X-Content-Type-Options:
       - nosniff
       X-Ms-Request-Id:
-      - 204673eb-b002-003b-64ae-2971b0000000
+      - 6ac2affc-2002-0020-27c8-7893d2000000
       X-Ms-Version:
       - "2019-02-02"
     status: 201 Created
     code: 201
     duration: ""
 - request:
-    body: '{"BoolProp":true,"IntProp":1,"PartitionKey":"partition","RowKey":"1","StringProp":"some
-      string 1"}'
+    body: '{"Bool":true,"Integer":1,"PartitionKey":"partition","RowKey":"1","String":"some
+      string 1","TimeStamp":"0001-01-01T00:00:00Z"}'
     form: {}
     headers:
       Accept:
@@ -56,7 +56,7 @@ interactions:
       Authorization:
       - sanitized
       Content-Length:
-      - "98"
+      - "125"
       Content-Type:
       - application/json
       Dataserviceversion:
@@ -64,13 +64,13 @@ interactions:
       Prefer:
       - return-no-content
       User-Agent:
-      - azsdk-go-tables/<version> azsdk-go-tables/<version> azcore/v0.13.4 (go1.16.2;
+      - azsdk-go-aztable/<version> azsdk-go-aztable/<version> azcore/v0.16.2 (go1.16.5;
         Windows_NT)
       X-Ms-Date:
-      - Mon, 05 Apr 2021 00:00:55 GMT
+      - Wed, 14 Jul 2021 15:54:31 GMT
       X-Ms-Version:
       - "2019-02-02"
-    url: https://chrisstablesprim.table.core.windows.net/gotableldjhskq166plj
+    url: https://seankaneprim.table.core.windows.net/gotables5trepuob5fym
     method: POST
   response:
     body: ""
@@ -80,13 +80,13 @@ interactions:
       Content-Length:
       - "0"
       Dataserviceid:
-      - https://chrisstablesprim.table.core.windows.net/gotableldjhskq166plj(PartitionKey='partition',RowKey='1')
+      - https://seankaneprim.table.core.windows.net/gotables5trepuob5fym(PartitionKey='partition',RowKey='1')
       Date:
-      - Mon, 05 Apr 2021 00:00:55 GMT
+      - Wed, 14 Jul 2021 15:54:30 GMT
       Etag:
-      - W/"datetime'2021-04-05T00%3A00%3A55.7477359Z'"
+      - W/"datetime'2021-07-14T15%3A54%3A31.1279191Z'"
       Location:
-      - https://chrisstablesprim.table.core.windows.net/gotableldjhskq166plj(PartitionKey='partition',RowKey='1')
+      - https://seankaneprim.table.core.windows.net/gotables5trepuob5fym(PartitionKey='partition',RowKey='1')
       Preference-Applied:
       - return-no-content
       Server:
@@ -94,7 +94,7 @@ interactions:
       X-Content-Type-Options:
       - nosniff
       X-Ms-Request-Id:
-      - 204673f0-b002-003b-67ae-2971b0000000
+      - 6ac2b039-2002-0020-5fc8-7893d2000000
       X-Ms-Version:
       - "2019-02-02"
     status: 204 No Content
@@ -109,13 +109,13 @@ interactions:
       Authorization:
       - sanitized
       User-Agent:
-      - azsdk-go-tables/<version> azsdk-go-tables/<version> azcore/v0.13.4 (go1.16.2;
+      - azsdk-go-aztable/<version> azsdk-go-aztable/<version> azcore/v0.16.2 (go1.16.5;
         Windows_NT)
       X-Ms-Date:
-      - Mon, 05 Apr 2021 00:00:55 GMT
+      - Wed, 14 Jul 2021 15:54:31 GMT
       X-Ms-Version:
       - "2019-02-02"
-    url: https://chrisstablesprim.table.core.windows.net/Tables('gotableldjhskq166plj')
+    url: https://seankaneprim.table.core.windows.net/Tables('gotables5trepuob5fym')
     method: DELETE
   response:
     body: ""
@@ -125,13 +125,13 @@ interactions:
       Content-Length:
       - "0"
       Date:
-      - Mon, 05 Apr 2021 00:00:55 GMT
+      - Wed, 14 Jul 2021 15:54:30 GMT
       Server:
       - Windows-Azure-Table/1.0 Microsoft-HTTPAPI/2.0
       X-Content-Type-Options:
       - nosniff
       X-Ms-Request-Id:
-      - 204673f1-b002-003b-68ae-2971b0000000
+      - 6ac2b089-2002-0020-27c8-7893d2000000
       X-Ms-Version:
       - "2019-02-02"
     status: 204 No Content
